...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="K5u-JK-5lb">
                                <rect key="frame" x="166.66666666666666" y="396" width="60" height="60"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RfJ-Uo-BEZ">
                                <rect key="frame" x="16" y="743" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="48" id="Edg-eF-jjy"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="343" id="v5t-2L-a56"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                <connections>
                                    <outlet property="delegate" destination="cWi-ht-BX8" id="ljg-Bg-CUV"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WWR-H5-MsJ">
                                <rect key="frame" x="9" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="SingleViewBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="fbq-dj-otU"/>
                                    <constraint firstAttribute="width" constant="48" id="m5b-Bs-aQ9"/>
                                </constraints>
                                <color key="tintColor" name="YP White"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
